// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite-plugin-jsx > distinguishes between properties (.) and attributes 1`] = `
"import { html } from "@inglorious/web";
const App = () => html\`<my-element id=\${id} class=\${cls} aria-label=\${label} data-test=\${test} .someProp=\${value} .complexData=\${obj}></my-element>\`;"
`;

exports[`vite-plugin-jsx > does not generate closing tag for void elements 1`] = `
"import { html } from "@inglorious/web";
html\`<img src="image.png" />\`;"
`;

exports[`vite-plugin-jsx > expands self-closing non-void HTML tags 1`] = `
"import { html } from "@inglorious/web";
html\`<div class="empty"></div>\`;"
`;

exports[`vite-plugin-jsx > handles SVG self-closing tags correctly 1`] = `
"import { html } from "@inglorious/web";
const Icon = () => html\`<svg> \${html\`<path d="M0 0h10v10H0z" />\`} \${html\`<circle cx="5" cy="5" r="5" />\`} </svg>\`;"
`;

exports[`vite-plugin-jsx > handles boolean attributes 1`] = `
"import { html } from "@inglorious/web";
html\`<input disabled checked readonly />\`;"
`;

exports[`vite-plugin-jsx > handles event listeners (@event syntax) 1`] = `
"import { html } from "@inglorious/web";
html\`<button @click=\${handleClick} @mouseover=\${() => {}}>Click</button>\`;"
`;

exports[`vite-plugin-jsx > handles fragments 1`] = `
"import { html } from "@inglorious/web";
const List = () => html\` \${html\`<li>A</li>\`} \${html\`<li>B</li>\`} \`;"
`;

exports[`vite-plugin-jsx > handles nested expressions and elements 1`] = `
"import { html, when } from "@inglorious/web";
const App = () => html\`<div>\${when(show, () => html\`<span>Visible</span>\`, () => null)}</div>\`;"
`;

exports[`vite-plugin-jsx > ignores empty expressions and comments 1`] = `
"import { html } from "@inglorious/web";
const App = () => html\`<div>   \${html\`<span>Content</span>\`} </div>\`;"
`;

exports[`vite-plugin-jsx > merges imports if @inglorious/web is already imported 1`] = `
"import { html, when } from "@inglorious/web";
const App = ({
  show
}) => html\`<div>\${when(show, () => html\`<A></A>\`, () => html\`<B></B>\`)}</div>\`;"
`;

exports[`vite-plugin-jsx > transforms Array.map to repeat directive 1`] = `
"import { html } from "@inglorious/web";
const List = ({
  items
}) => html\`<ul> \${items.map(item => html\`<li>\${item}</li>\`)} </ul>\`;"
`;

exports[`vite-plugin-jsx > transforms Array.map with key to keyed repeat directive 1`] = `
"import { html } from "@inglorious/web";
const List = ({
  items
}) => html\`<ul> \${items.map(item => html\`<li .key=\${item.id}>\${item.name}</li>\`)} </ul>\`;"
`;

exports[`vite-plugin-jsx > transforms basic JSX elements 1`] = `
"import { html } from "@inglorious/web";
export const App = () => html\`<div>Hello World</div>\`;"
`;

exports[`vite-plugin-jsx > transforms className to class 1`] = `
"import { html } from "@inglorious/web";
html\`<div class="container">Content</div>\`;"
`;

exports[`vite-plugin-jsx > transforms logical AND to when directive 1`] = `
"import { html, when } from "@inglorious/web";
const App = ({
  show
}) => html\`<div>\${when(show, () => html\`<Modal></Modal>\`)}</div>\`;"
`;

exports[`vite-plugin-jsx > transforms ternary operators to when directive 1`] = `
"import { html, when } from "@inglorious/web";
const App = ({
  isLoggedIn
}) => html\`<div>\${when(isLoggedIn, () => html\`<User></User>\`, () => html\`<Login></Login>\`)}</div>\`;"
`;
